- xHCI: store ring's last segment and segment numbers   (bnc#920620). - xHCI: count free TRBs on transfer ring (bnc#920620). - xHCI: factor out segments allocation and free function   (bnc#920620). - xHCI: set cycle state when allocate rings (bnc#920620). - xHCI: dynamic ring expansion (bnc#920620). - xhci: Don't warn on empty ring for suspended devices   (bnc#920620). - xhci: Fix hang on back-to-back Set TR Deq Ptr commands   (bnc#920620). - xHCI: check enqueue pointer advance into dequeue seg   (bnc#920620). - xHCI: Allocate 2 segments for transfer ring. - xHCI: update sg tablesize (bnc#920620). - USB: xhci-hcd: print URB's expected length in decimal, not hex   (bnc#920620). - xhci: Rate-limit XHCI_TRUST_TX_LENGTH quirk warning   (bnc#920620). - xhci: Fix bug after deq ptr set to link TRB (bnc#920620). - driver core: Add dev_*_ratelimited() family (bnc#920620). - drivers/usb/host/xhci-ring.c: removes unnecessary semicolon   (bnc#920620). - usb: host: xhci: remove unused trb var in xhci_irq()   (bnc#920620). - usb: xhci: fix build warning (bnc#920620). - xhci: Remove BUG_ON in xhci_get_input_control_ctx (bnc#920620). - xhci: Ensure a command structure points to the correct trb on   the command ring (bnc#920620). - xhci: refactor TRB_ENABLE_SLOT case into function (bnc#920620). - xhci: refactor TRB_DISABLE_SLOT case into function (bnc#920620). - xhci: refactor TRB_ADDR_DEV case into function (bnc#920620). - xhci: use completion event's slot id rather than dig it out   of command (bnc#920620). - xhci: refactor TRB_RESET_DEV case into function (bnc#920620). - xhci: refactor TRB_EVAL_CONTEXT case into function (bnc#920620). - xhci: remove unused 'ep_ring' variable in   handle_cmd_completion() (bnc#920620). - xhci: add variable 'cmd_comp_code' in handle_cmd_completion()   (bnc#920620). - xhci: add variable 'cmd_trb' in handle_cmd_completion()   (bnc#920620). - xhci: add variable 'cmd_type' in handle_cmd_completion()   (bnc#920620). - xhci: replace 'xhci->cmd_ring->deque

--- a/series.conf
+++ b/series.conf
@@ -17749,6 +17749,59 @@
 	#fixes for improved debugging
 	patches.drivers/0001-xhci-add-the-meaningful-IRQ-description-if-it-is-emp.patch
 
+	#ring expansion
+	patches.drivers/0001-xHCI-store-ring-s-type.patch
+	patches.drivers/0001-xHCI-store-ring-s-last-segment-and-segment-numbers.patch
+	patches.drivers/0002-xHCI-count-free-TRBs-on-transfer-ring.patch
+	patches.drivers/0003-xHCI-factor-out-segments-allocation-and-free-functio.patch
+	patches.drivers/0004-xHCI-set-cycle-state-when-allocate-rings.patch
+	patches.drivers/0005-xHCI-dynamic-ring-expansion.patch
+	patches.drivers/0006-xhci-Don-t-warn-on-empty-ring-for-suspended-devices.patch
+	patches.drivers/0007-xhci-Fix-hang-on-back-to-back-Set-TR-Deq-Ptr-command.patch
+	patches.drivers/0008-xHCI-check-enqueue-pointer-advance-into-dequeue-seg.patch
+	patches.drivers/0009-xHCI-Allocate-2-segments-for-transfer-ring.patch
+	patches.drivers/0010-xHCI-update-sg-tablesize.patch
+	patches.drivers/0011-USB-xhci-hcd-print-URB-s-expected-length-in-decimal-.patch
+	patches.drivers/0012-xhci-Rate-limit-XHCI_TRUST_TX_LENGTH-quirk-warning.patch
+	patches.drivers/0013-xhci-Fix-bug-after-deq-ptr-set-to-link-TRB.patch
+	patches.drivers/0014-driver-core-Add-dev_-_ratelimited-family.patch
+	patches.drivers/0015-drivers-usb-host-xhci-ring.c-removes-unnecessary-sem.patch
+	patches.drivers/0016-usb-host-xhci-remove-unused-trb-var-in-xhci_irq.patch
+	patches.drivers/0017-usb-xhci-fix-build-warning.patch
+	patches.drivers/0018-xhci-Remove-BUG_ON-in-xhci_get_input_control_ctx.patch
+	patches.drivers/0019-xhci-Ensure-a-command-structure-points-to-the-correc.patch
+	patches.drivers/0020-xhci-refactor-TRB_ENABLE_SLOT-case-into-function.patch
+	patches.drivers/0021-xhci-refactor-TRB_DISABLE_SLOT-case-into-function.patch
+	patches.drivers/0022-xhci-refactor-TRB_ADDR_DEV-case-into-function.patch
+	patches.drivers/0023-xhci-use-completion-event-s-slot-id-rather-than-dig-.patch
+	patches.drivers/0024-xhci-refactor-TRB_RESET_DEV-case-into-function.patch
+	patches.drivers/0025-xhci-refactor-TRB_EVAL_CONTEXT-case-into-function.patch
+	patches.drivers/0026-xhci-remove-unused-ep_ring-variable-in-handle_cmd_co.patch
+	patches.drivers/0027-xhci-add-variable-cmd_comp_code-in-handle_cmd_comple.patch
+	patches.drivers/0028-xhci-add-variable-cmd_trb-in-handle_cmd_completion.patch
+	patches.drivers/0029-xhci-add-variable-cmd_type-in-handle_cmd_completion.patch
+	patches.drivers/0030-xhci-replace-xhci-cmd_ring-dequeue-with-trb-in-stop_.patch
+	patches.drivers/0031-xhci-add-argument-slot_id-in-stop_ep-set_deq-and-res.patch
+	patches.drivers/0032-usb-xhci-kill-a-conditional-when-toggling-cycle.patch
+	patches.drivers/0033-usb-xhci-Link-TRB-must-not-occur-within-a-USB-payloa.patch
+	patches.drivers/0034-xhci-convert-TRB_CYCLE-to-le32-before-using-it-to-se.patch
+	patches.drivers/0035-xhci-Avoid-infinite-loop-when-sg-urb-requires-too-ma.patch
+	patches.drivers/0036-xhci-Set-scatter-gather-limit-to-avoid-failed-block-.patch
+	patches.drivers/0037-usbdevfs-Add-a-USBDEVFS_GET_CAPABILITIES-ioctl.patch
+	patches.drivers/0038-USB-introduce-usb_device_no_sg_constraint-helper.patch
+	patches.drivers/0039-xhci-1.0-Limit-arbitrarily-aligned-scatter-gather.patch
+	patches.drivers/0040-Revert-xhci-Set-scatter-gather-limit-to-avoid-failed.patch
+	patches.drivers/0041-Revert-xhci-Avoid-infinite-loop-when-sg-urb-requires.patch
+	patches.drivers/0042-Revert-usb-xhci-Link-TRB-must-not-occur-within-a-USB.patch
+	patches.drivers/0043-xhci-Rename-SEGMENT_SIZE-and-SEGMENT_SHIFT-as-the-fo.patch
+	patches.drivers/0044-xhci-fix-usb3-streams.patch
+	patches.drivers/0045-xhci-Remove-segments-from-radix-tree-on-failed-inser.patch
+	patches.drivers/0046-xhci-xhci_mem_cleanup-make-sure-cmd_ring_reserved_tr.patch
+	patches.drivers/0047-xhci-The-trb_address_map-radix-tree-expects-1KB-segm.patch
+	patches.drivers/0048-Revert-xhci-1.0-Limit-arbitrarily-aligned-scatter-ga.patch
+	patches.drivers/0049-xhci-Use-correct-SLOT-ID-when-handling-a-reset-devic.patch
+	patches.drivers/0050-xhci-xhci_ring_device-Ring-stream-ring-bells-for-end.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
