x86, tls, ldt: Stop checking lm in LDT_empty (bsc#920250).

--- a/series.conf
+++ b/series.conf
@@ -17070,6 +17070,9 @@
 	# bnc#914726 L3: Partner-L3: panic during poweroff in check_irq_vectors_for_cpu_disable+0x83/0x1b0
 	patches.fixes/x86-irq-check-for-valid-irq-descriptor-in-check_irq_vectors_for_cpu_disable
 
+	# bsc#920250
+	patches.arch/01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
