x86, tls: Interpret an all-zero struct user_desc as "no segment" (bsc#920250).

--- a/series.conf
+++ b/series.conf
@@ -17090,6 +17090,7 @@
 
 	# bsc#920250
 	patches.arch/01-x86-tls-ldt-stop-checking-lm-in-ldt_empty.patch
+	patches.arch/02-x86-tls-interpret-an-all-zero-struct-user_desc-as-no-segment.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
