udp: only allow UFO for packets from SOCK_DGRAM sockets (bnc#909309).

--- a/series.conf
+++ b/series.conf
@@ -1962,6 +1962,7 @@
 
 	patches.fixes/nf_conntrack-avoid-reference-leak-in-__ipv6_conntrac.patch
 	patches.fixes/ipv6-fix-net-reference-leak-in-IPv6-conntrack-reasse.patch
+	patches.fixes/udp-only-allow-UFO-for-packets-from-SOCK_DGRAM-socke.patch
 
 	########################################################
 	# tipc
