--- a/series.conf
+++ b/series.conf
@@ -13746,6 +13746,9 @@
 	patches.drivers/0001-ttusb-dec-buffer-overflow-in-ioctl.patch
 	patches.drivers/0001-usb-xhci-rework-root-port-wake-bits-if-controller-is.patch
 
+	#ugly work around lack of ring expansion
+	patches.suse/0001-Do-not-switch-internal-CDC-device-on-IBM-NeXtScale-n.patch
+
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
 
