--- a/series.conf
+++ b/series.conf
@@ -13748,6 +13748,7 @@
 
 	#ugly work around lack of ring expansion
 	patches.suse/0001-Do-not-switch-internal-CDC-device-on-IBM-NeXtScale-n.patch
+	patches.drivers/0001-uvc-work-on-XHCI-controllers-without-ring-expansion.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
