- Delete   patches.drivers/0002-xHCI-store-ring-s-last-segment-and-segment-numbers.patch. - Delete   patches.drivers/0003-xHCI-count-free-TRBs-on-transfer-ring.patch. - Delete   patches.drivers/0004-xHCI-factor-out-segments-allocation-and-free-functio.patch. - Delete   patches.drivers/0005-xHCI-set-cycle-state-when-allocate-rings.patch. - Delete patches.drivers/0006-xHCI-dynamic-ring-expansion.patch. - Delete   patches.drivers/0007-xhci-Don-t-warn-on-empty-ring-for-suspended-devices.patch. - Delete   patches.drivers/0008-xhci-Fix-hang-on-back-to-back-Set-TR-Deq-Ptr-command.patch. - Delete   patches.drivers/0009-xHCI-check-enqueue-pointer-advance-into-dequeue-seg.patch. - Delete   patches.drivers/0010-xHCI-Allocate-2-segments-for-transfer-ring.patch. - Delete patches.drivers/0011-xHCI-update-sg-tablesize.patch.

--- a/series.conf
+++ b/series.conf
@@ -17887,19 +17887,6 @@
 	patches.drivers/0004-USB-Fix-connected-device-switch-to-Inactive-state.patch
 	patches.drivers/0005-modify-hub-to-detect-unplugs-in-all-states.patch
 
-	#ring expansion patches
-+oneukum	patches.drivers/0001-xHCI-store-ring-s-type.patch
-+oneukum	patches.drivers/0002-xHCI-store-ring-s-last-segment-and-segment-numbers.patch
-+oneukum	patches.drivers/0003-xHCI-count-free-TRBs-on-transfer-ring.patch
-+oneukum	patches.drivers/0004-xHCI-factor-out-segments-allocation-and-free-functio.patch
-+oneukum	patches.drivers/0005-xHCI-set-cycle-state-when-allocate-rings.patch
-+oneukum	patches.drivers/0006-xHCI-dynamic-ring-expansion.patch
-+oneukum	patches.drivers/0007-xhci-Don-t-warn-on-empty-ring-for-suspended-devices.patch
-+oneukum	patches.drivers/0008-xhci-Fix-hang-on-back-to-back-Set-TR-Deq-Ptr-command.patch
-+oneukum	patches.drivers/0009-xHCI-check-enqueue-pointer-advance-into-dequeue-seg.patch
-+oneukum	patches.drivers/0010-xHCI-Allocate-2-segments-for-transfer-ring.patch
-+oneukum	patches.drivers/0011-xHCI-update-sg-tablesize.patch
-
 	#selected patches from 3.10
 	patches.drivers/btusb-add-mt76x0e.patch
 	patches.drivers/0001-USB-xHCI-override-bogus-bulk-wMaxPacketSize-values.patch
@@ -18064,6 +18051,8 @@
 	patches.drivers/0048-Revert-xhci-1.0-Limit-arbitrarily-aligned-scatter-ga.patch
 	patches.drivers/0049-xhci-Use-correct-SLOT-ID-when-handling-a-reset-devic.patch
 	patches.drivers/0050-xhci-xhci_ring_device-Ring-stream-ring-bells-for-end.patch
+	#still needed for HP webcams
+	patches.drivers/0001-uvc-work-on-XHCI-controllers-without-ring-expansion.patch
 
 	#kABI placeholders
 	patches.suse/0001-Add-a-void-suse_kabi_padding-placeholder-to-some-USB.patch
