mpt2sas, mpt3sas: log exceeded temperature thresholds (bnc#909785,FATE#317519).

--- a/series.conf
+++ b/series.conf
@@ -7323,6 +7323,7 @@
 	patches.drivers/mpt2sas-fix-undefined-__udivdi3.patch
 	patches.drivers/mpt2sas-0091-issue_reset-is-uninitialized.patch
 	patches.drivers/mpt2sas-0092-MPI2-Rev-AA-2.00.19-specifications.patch
+	patches.drivers/mpt2sas-0093-log-exceeded-temperature-thresholds.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
