mpt2sas: MPI2 Rev BB (2.00.20) specification and 2.00.35 header files (bnc#909785,FATE#317519).

--- a/series.conf
+++ b/series.conf
@@ -7326,6 +7326,7 @@
 	patches.drivers/mpt2sas-0093-log-exceeded-temperature-thresholds.patch
 	patches.drivers/mpt2sas-0094-Fail-the-host-reset-initiated-due-to.patch
 	patches.drivers/mpt2sas-0095-Bump-driver-version-to-19.100.00.00.patch
+	patches.drivers/mpt2sas-0096-MPI2-Rev-BB-2.00.20-specification-and-2.00.3.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
