--- a/series.conf
+++ b/series.conf
@@ -7322,6 +7322,7 @@
 	patches.drivers/mpt2sas-0090-Bump-mpt2sas-driver-version-to-18.100.00.00.patch
 	patches.drivers/mpt2sas-fix-undefined-__udivdi3.patch
 	patches.drivers/mpt2sas-0091-issue_reset-is-uninitialized.patch
+	patches.drivers/mpt2sas-0092-MPI2-Rev-AA-2.00.19-specifications.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
