--- a/series.conf
+++ b/series.conf
@@ -7327,6 +7327,7 @@
 	patches.drivers/mpt2sas-0094-Fail-the-host-reset-initiated-due-to.patch
 	patches.drivers/mpt2sas-0095-Bump-driver-version-to-19.100.00.00.patch
 	patches.drivers/mpt2sas-0096-MPI2-Rev-BB-2.00.20-specification-and-2.00.3.patch
+	patches.drivers/mpt2sas-0097-Fix-upper-bound-for-the-module-param.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
