mpt2sas: Bump driver version to 20.100.00.00 (bnc#909785,FATE#317519).

--- a/series.conf
+++ b/series.conf
@@ -7331,6 +7331,7 @@
 	patches.drivers/mpt2sas-0098-map-log_info-value-0x0x32010081-to-DID_RESET.patch
 	patches.drivers/mpt2sas-0099-Update-attribution-language-to-Avago.patch
 	patches.drivers/mpt2sas-0100-set-cpu-affinity-for-each-MSIX-vecto.patch
+	patches.drivers/mpt2sas-0101-Bump-driver-version-to-20.100.00.00.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
