mpt2sas, mpt3sas: Update attribution language to Avago (bnc#909785,FATE#317519).

--- a/series.conf
+++ b/series.conf
@@ -7329,6 +7329,7 @@
 	patches.drivers/mpt2sas-0096-MPI2-Rev-BB-2.00.20-specification-and-2.00.3.patch
 	patches.drivers/mpt2sas-0097-Fix-upper-bound-for-the-module-param.patch
 	patches.drivers/mpt2sas-0098-map-log_info-value-0x0x32010081-to-DID_RESET.patch
+	patches.drivers/mpt2sas-0099-Update-attribution-language-to-Avago.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
