mpt2sas: Bump driver version to 19.100.00.00 (bnc#909785,FATE#317519).

--- a/series.conf
+++ b/series.conf
@@ -7325,6 +7325,7 @@
 	patches.drivers/mpt2sas-0092-MPI2-Rev-AA-2.00.19-specifications.patch
 	patches.drivers/mpt2sas-0093-log-exceeded-temperature-thresholds.patch
 	patches.drivers/mpt2sas-0094-Fail-the-host-reset-initiated-due-to.patch
+	patches.drivers/mpt2sas-0095-Bump-driver-version-to-19.100.00.00.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
