mpt2sas: issue_reset is uninitialized (bnc#909785,FATE#317519).

--- a/series.conf
+++ b/series.conf
@@ -7321,6 +7321,7 @@
 	patches.drivers/mpt2sas-0089-Get-IOC_FACTS-information-using-handshake-pr.patch
 	patches.drivers/mpt2sas-0090-Bump-mpt2sas-driver-version-to-18.100.00.00.patch
 	patches.drivers/mpt2sas-fix-undefined-__udivdi3.patch
+	patches.drivers/mpt2sas-0091-issue_reset-is-uninitialized.patch
 
 	patches.drivers/miscdevice-Adding-support-for-MPT3SAS_MINOR-222.patch
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
