--- a/series.conf
+++ b/series.conf
@@ -7366,6 +7366,7 @@
 	patches.drivers/mpt3sas-0029-Bump-mpt3sas-driver-version-to-04.100.00.00.patch
 	patches.drivers/mpt3sas-0030-Added-Combined-Reply-Queue-feature-to-extend.patch
 	patches.drivers/mpt3sas-0031-Get-IOC_FACTS-information-using-handshake-pr.patch
+	patches.drivers/mpt3sas-0032-Added-module-parameter-unblock_io-to-unblock.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
