--- a/series.conf
+++ b/series.conf
@@ -7372,6 +7372,7 @@
 	patches.drivers/mpt3sas-0035-Provides-the-physical-location-of-sas-drives.patch
 	patches.drivers/mpt3sas-0036-fix-upper-bound-for-the-module-param.patch
 	patches.drivers/mpt3sas-0037-Update-MPI2-strings-to-MPI2.5.patch
+	patches.drivers/mpt3sas-0038-MPI-2.5-Rev-J-2.5.5-specification-and-2.00.3.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
