mpt3sas: Added Combined Reply Queue feature to extend up-to 96 MSIX vector support (bnc#909784,FATE#317520).

--- a/series.conf
+++ b/series.conf
@@ -7364,6 +7364,7 @@
 	patches.drivers/mpt3sas-0027-Added-OEM-branding-Strings.patch
 	patches.drivers/mpt3sas-0028-Added-Reply-Descriptor-Post-Queue-RDPQ-Array.patch
 	patches.drivers/mpt3sas-0029-Bump-mpt3sas-driver-version-to-04.100.00.00.patch
+	patches.drivers/mpt3sas-0030-Added-Combined-Reply-Queue-feature-to-extend.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
