--- a/series.conf
+++ b/series.conf
@@ -7374,6 +7374,7 @@
 	patches.drivers/mpt3sas-0037-Update-MPI2-strings-to-MPI2.5.patch
 	patches.drivers/mpt3sas-0038-MPI-2.5-Rev-J-2.5.5-specification-and-2.00.3.patch
 	patches.drivers/mpt3sas-0039-Add-branding-string-support-for-OEM-s-HBA.patch
+	patches.drivers/mpt3sas-0040-Add-branding-string-support-for-OEM-custom-H.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
