--- a/series.conf
+++ b/series.conf
@@ -7365,6 +7365,7 @@
 	patches.drivers/mpt3sas-0028-Added-Reply-Descriptor-Post-Queue-RDPQ-Array.patch
 	patches.drivers/mpt3sas-0029-Bump-mpt3sas-driver-version-to-04.100.00.00.patch
 	patches.drivers/mpt3sas-0030-Added-Combined-Reply-Queue-feature-to-extend.patch
+	patches.drivers/mpt3sas-0031-Get-IOC_FACTS-information-using-handshake-pr.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
