--- a/series.conf
+++ b/series.conf
@@ -7383,6 +7383,7 @@
 	patches.drivers/mpt3sas-0046-Use-alloc_ordered_workqueue-API-instead-of-c.patch
 	patches.drivers/mpt3sas-0047-Call-dma_mapping_error-API-after-mapping-an-.patch
 	patches.drivers/mpt3sas-0048-When-device-is-blocked-followed-by-unblock-f.patch
+	patches.drivers/mpt3sas-0049-Bump-mpt3sas-driver-version-to-9.100.00.00.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
