mpt3sas: Added support for customer specific branding (bnc#909784,FATE#317520).

--- a/series.conf
+++ b/series.conf
@@ -7379,6 +7379,7 @@
 	patches.drivers/mpt3sas-0042-MPI-2.5-Rev-JK-2.5.6-specifications.patch
 	patches.drivers/mpt3sas-0043-Complete-the-SCSI-command-with-DID_RESET-sta.patch
 	patches.drivers/mpt3sas-0044-Return-host-busy-error-status-to-SML-when-DM.patch
+	patches.drivers/mpt3sas-0045-Added-support-for-customer-specific-branding.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
