--- a/series.conf
+++ b/series.conf
@@ -7378,6 +7378,7 @@
 	patches.drivers/mpt3sas-0041-Bump-mpt3sas-driver-version-to-v6.100.00.00.patch
 	patches.drivers/mpt3sas-0042-MPI-2.5-Rev-JK-2.5.6-specifications.patch
 	patches.drivers/mpt3sas-0043-Complete-the-SCSI-command-with-DID_RESET-sta.patch
+	patches.drivers/mpt3sas-0044-Return-host-busy-error-status-to-SML-when-DM.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
