mpt3sas: MPI 2.5 Rev JK (2.5.6) specifications (bnc#909784,FATE#317520).

--- a/series.conf
+++ b/series.conf
@@ -7376,6 +7376,7 @@
 	patches.drivers/mpt3sas-0039-Add-branding-string-support-for-OEM-s-HBA.patch
 	patches.drivers/mpt3sas-0040-Add-branding-string-support-for-OEM-custom-H.patch
 	patches.drivers/mpt3sas-0041-Bump-mpt3sas-driver-version-to-v6.100.00.00.patch
+	patches.drivers/mpt3sas-0042-MPI-2.5-Rev-JK-2.5.6-specifications.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
