--- a/series.conf
+++ b/series.conf
@@ -7380,6 +7380,7 @@
 	patches.drivers/mpt3sas-0043-Complete-the-SCSI-command-with-DID_RESET-sta.patch
 	patches.drivers/mpt3sas-0044-Return-host-busy-error-status-to-SML-when-DM.patch
 	patches.drivers/mpt3sas-0045-Added-support-for-customer-specific-branding.patch
+	patches.drivers/mpt3sas-0046-Use-alloc_ordered_workqueue-API-instead-of-c.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
