mpt3sas: Provides the physical location of sas drives (bnc#909784,FATE#317520).

--- a/series.conf
+++ b/series.conf
@@ -7369,6 +7369,7 @@
 	patches.drivers/mpt3sas-0032-Added-module-parameter-unblock_io-to-unblock.patch
 	patches.drivers/mpt3sas-0033-Remove-redundancy-code-while-freeing.patch
 	patches.drivers/mpt3sas-0034-MPI-2.5-Rev-I-2.5.4-specifications.patch
+	patches.drivers/mpt3sas-0035-Provides-the-physical-location-of-sas-drives.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
