--- a/series.conf
+++ b/series.conf
@@ -7370,6 +7370,7 @@
 	patches.drivers/mpt3sas-0033-Remove-redundancy-code-while-freeing.patch
 	patches.drivers/mpt3sas-0034-MPI-2.5-Rev-I-2.5.4-specifications.patch
 	patches.drivers/mpt3sas-0035-Provides-the-physical-location-of-sas-drives.patch
+	patches.drivers/mpt3sas-0036-fix-upper-bound-for-the-module-param.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
