mpt3sas: Call dma_mapping_error() API after mapping an address with dma_map_single() API (bnc#909784,FATE#317520).

--- a/series.conf
+++ b/series.conf
@@ -7381,6 +7381,7 @@
 	patches.drivers/mpt3sas-0044-Return-host-busy-error-status-to-SML-when-DM.patch
 	patches.drivers/mpt3sas-0045-Added-support-for-customer-specific-branding.patch
 	patches.drivers/mpt3sas-0046-Use-alloc_ordered_workqueue-API-instead-of-c.patch
+	patches.drivers/mpt3sas-0047-Call-dma_mapping_error-API-after-mapping-an-.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
