--- a/series.conf
+++ b/series.conf
@@ -7371,6 +7371,7 @@
 	patches.drivers/mpt3sas-0034-MPI-2.5-Rev-I-2.5.4-specifications.patch
 	patches.drivers/mpt3sas-0035-Provides-the-physical-location-of-sas-drives.patch
 	patches.drivers/mpt3sas-0036-fix-upper-bound-for-the-module-param.patch
+	patches.drivers/mpt3sas-0037-Update-MPI2-strings-to-MPI2.5.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
