--- a/series.conf
+++ b/series.conf
@@ -7377,6 +7377,7 @@
 	patches.drivers/mpt3sas-0040-Add-branding-string-support-for-OEM-custom-H.patch
 	patches.drivers/mpt3sas-0041-Bump-mpt3sas-driver-version-to-v6.100.00.00.patch
 	patches.drivers/mpt3sas-0042-MPI-2.5-Rev-JK-2.5.6-specifications.patch
+	patches.drivers/mpt3sas-0043-Complete-the-SCSI-command-with-DID_RESET-sta.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
