--- a/series.conf
+++ b/series.conf
@@ -7375,6 +7375,7 @@
 	patches.drivers/mpt3sas-0038-MPI-2.5-Rev-J-2.5.5-specification-and-2.00.3.patch
 	patches.drivers/mpt3sas-0039-Add-branding-string-support-for-OEM-s-HBA.patch
 	patches.drivers/mpt3sas-0040-Add-branding-string-support-for-OEM-custom-H.patch
+	patches.drivers/mpt3sas-0041-Bump-mpt3sas-driver-version-to-v6.100.00.00.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
