--- a/series.conf
+++ b/series.conf
@@ -7382,6 +7382,7 @@
 	patches.drivers/mpt3sas-0045-Added-support-for-customer-specific-branding.patch
 	patches.drivers/mpt3sas-0046-Use-alloc_ordered_workqueue-API-instead-of-c.patch
 	patches.drivers/mpt3sas-0047-Call-dma_mapping_error-API-after-mapping-an-.patch
+	patches.drivers/mpt3sas-0048-When-device-is-blocked-followed-by-unblock-f.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 
 	# SCSI update for SP4
