- mpt2sas, mpt3sas: Fail the host reset initiated due to discovery   (bnc#909785,FATE#317519). - mpt2sas, mpt3sas: fix upper bound for the module parameter   (bnc#909785,FATE#317519). - mpt2sas, mpt3sas: Update attribution language to Avago   (bnc#909785,FATE#317519). - mpt2sas, mpt3sas: log exceeded temperature thresholds   (bnc#909785,FATE#317519). - mpt2sas, mpt3sas: set cpu affinity for each MSIX vectors   (bnc#909785,FATE#317519). - Refresh   patches.drivers/mpt2sas-0093-log-exceeded-temperature-thresholds.patch. - Refresh   patches.drivers/mpt2sas-0094-Fail-the-host-reset-initiated-due-to.patch. - Refresh   patches.drivers/mpt2sas-0097-Fix-upper-bound-for-the-module-param.patch. - Refresh   patches.drivers/mpt2sas-0099-Update-attribution-language-to-Avago.patch. - Refresh   patches.drivers/mpt2sas-0100-set-cpu-affinity-for-each-MSIX-vecto.patch.

--- a/series.conf
+++ b/series.conf
@@ -7364,6 +7364,11 @@
 	patches.drivers/mpt3sas-0027-Added-OEM-branding-Strings.patch
 	patches.drivers/mpt3sas-0028-Added-Reply-Descriptor-Post-Queue-RDPQ-Array.patch
 	patches.drivers/mpt3sas-0029-Bump-mpt3sas-driver-version-to-04.100.00.00.patch
+	patches.drivers/mpt3sas-log-exceeded-temperature-thresholds.patch
+	patches.drivers/mpt3sas-Fail-the-host-reset-initiated-due-to.patch
+	patches.drivers/mpt3sas-Fix-upper-bound-for-the-module-param.patch
+	patches.drivers/mpt3sas-Update-attribution-language-to-Avago.patch
+	patches.drivers/mpt3sas-set-cpu-affinity-for-each-MSIX-vecto.patch
 	patches.drivers/mpt3sas-0030-Added-Combined-Reply-Queue-feature-to-extend.patch
 	patches.drivers/mpt3sas-0031-Get-IOC_FACTS-information-using-handshake-pr.patch
 	patches.drivers/mpt3sas-0032-Added-module-parameter-unblock_io-to-unblock.patch
