Rename a hv_storvsc patch to get proper patch ordering

--- a/series.conf
+++ b/series.conf
@@ -20979,6 +20979,7 @@
 	patches.suse/msft-hv-0626-Drivers-scsi-storvsc-Implement-a-eh_timed_out-handle.patch
 	patches.suse/msft-hv-0627-drivers-scsi-storvsc-Set-srb_flags-in-all-cases.patch
 	patches.suse/msft-hv-0628-drivers-scsi-storvsc-Correctly-handle-TEST_UNIT_READ.patch
+	patches.suse/msft-hv-0628-SCSI-storvsc-NULL-pointer-dereference-fix.patch
 	patches.suse/msft-hv-0629-Drivers-add-blist-flags.patch
 	patches.suse/msft-hv-0630-video-hyperv-hyperv_fb-refresh-the-VM-screen-by-forc.patch
 	patches.suse/msft-hv-0631-HID-hyperv-register-as-a-wakeup-source.patch
@@ -21643,9 +21644,6 @@
 
 	# bnc#852967 CVE-2013-6885
 	patches.fixes/x86-cpu-amd-add-workaround-for-family-16h-erratum-793.patch
-
-	# bnc#865330
-	patches.drivers/storvsc-null-pointer-dereference-fix
 
 	# bnc#874577 intel-iommu: off-by-one in pagetable freeing
 	patches.fixes/intel-iommu-fix-off-by-one-in-pagetable-freeing.patch
