sched: replace INIT_COMPLETION with reinit_completion (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -447,6 +447,8 @@
 	patches.fixes/0001-coredump-ensure-the-fpu-state-is-flushed-for-proper-.patch
 	patches.fixes/0002-x86-xsave-remove-thread_has_fpu-bug-check-in-__sanit.patch
 
+	patches.suse/sched-replace-INIT_COMPLETION-with-reinit_completion.patch
+
 	########################################################
 	# futex
 	########################################################
