--- a/series.conf
+++ b/series.conf
@@ -16350,6 +16350,8 @@
 	patches.drivers/mlx5-0128-net-mlx5_core-Move-to-use-hex-PCI-device-IDs.patch
 	patches.drivers/mlx5-0129-net-Mellanox-Delete-unnecessary-checks-before-the-fu.patch
 
+	patches.drivers/net-mlx5_core-fix-configuration-of-log_uar_page_s.patch
+
 	# iw_cxgb4 and cxgb4 SP4 update (bsc#909577 FATE#317550)
 	patches.drivers/cxgb4-0001-RDMA-cxgb4-use-WARN.patch
 	patches.drivers/cxgb4-0002-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submission.patch
