clockevents: export clockevents_config_and_register for module use (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -296,6 +296,7 @@
 	patches.fixes/sched-Only-queue-remote-wakeups-when-crossing-cache-boundaries.patch
 
 	patches.fixes/clockevents-Reinstate-the-per-cpu-tick-skew.patch
+	patches.suse/clockevents-export-clockevents_config_and_register-f.patch
 	patches.fixes/sched-disable-FAIR_SLEEPERS-for-S390.patch
 
 	# bug 718521 - add any/all later fixes for this latency problem here
