storvsc: fix a bug in storvsc limits (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21025,6 +21025,7 @@
 	patches.suse/msft-hv-0711-hyperv-Fix-some-variable-name-typos-in-send-buffer-i.patch
 	patches.suse/msft-hv-0713-storvsc-in-responce-to-a-scan-event-scan-the-host.patch
 	patches.suse/msft-hv-0714-storvsc-force-discovery-of-LUNs-that-may-have-been-r.patch
+	patches.suse/msft-hv-0715-storvsc-fix-a-bug-in-storvsc-limits.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
