Tools: hv: remove unused bytes_written from kvp_update_file() (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21030,6 +21030,7 @@
 	patches.suse/msft-hv-0718-Drivers-hv-vmbus-Use-get_cpu-to-get-the-current-CPU.patch
 	patches.suse/msft-hv-0719-tools-hv-kvp_daemon-make-IPv6-only-injection-work.patch
 	patches.suse/msft-hv-0720-x86-hyperv-Mark-the-Hyper-V-clocksource-as-being-con.patch
+	patches.suse/msft-hv-0721-Tools-hv-remove-unused-bytes_written-from-kvp_update.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
