Drivers: hv: vmbus: Fix a bug in vmbus_establish_gpadl() (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21038,6 +21038,7 @@
 	patches.suse/msft-hv-0726-Drivers-hv-hv_balloon-Fix-a-locking-bug-in-the-ballo.patch
 	patches.suse/msft-hv-0727-Drivers-hv-hv_balloon-Don-t-post-pressure-status-fro.patch
 	patches.suse/msft-hv-0728-Drivers-hv-vmbus-Implement-a-clockevent-device.patch
+	patches.suse/msft-hv-0729-Drivers-hv-vmbus-Fix-a-bug-in-vmbus_establish_gpadl.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
