--- a/series.conf
+++ b/series.conf
@@ -21046,6 +21046,7 @@
 	patches.suse/msft-hv-0734-Drivers-hv-vmbus-serialize-Offer-and-Rescind-offer.patch
 	patches.suse/msft-hv-0735-Drivers-hv-vmbus-hv_process_timer_expiration-can-be-.patch
 	patches.suse/msft-hv-0736-HID-hyperv-match-wait_for_completion_timeout-return-.patch
+	patches.suse/msft-hv-0738-hyperv-netvsc.c-match-wait_for_completion_timeout-re.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
