--- a/series.conf
+++ b/series.conf
@@ -21037,6 +21037,7 @@
 	patches.suse/msft-hv-0725-Drivers-hv-hv_balloon-Make-adjustments-in-computing-.patch
 	patches.suse/msft-hv-0726-Drivers-hv-hv_balloon-Fix-a-locking-bug-in-the-ballo.patch
 	patches.suse/msft-hv-0727-Drivers-hv-hv_balloon-Don-t-post-pressure-status-fro.patch
+	patches.suse/msft-hv-0728-Drivers-hv-vmbus-Implement-a-clockevent-device.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
