Tools: hv: address compiler warnings for hv_kvp_daemon.c (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21031,6 +21031,7 @@
 	patches.suse/msft-hv-0719-tools-hv-kvp_daemon-make-IPv6-only-injection-work.patch
 	patches.suse/msft-hv-0720-x86-hyperv-Mark-the-Hyper-V-clocksource-as-being-con.patch
 	patches.suse/msft-hv-0721-Tools-hv-remove-unused-bytes_written-from-kvp_update.patch
+	patches.suse/msft-hv-0722-Tools-hv-address-compiler-warnings-for-hv_kvp_daemon.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
