HID: hyperv: match wait_for_completion_timeout return type (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21045,6 +21045,7 @@
 	patches.suse/msft-hv-0733-Drivers-hv-rename-sc_lock-to-the-more-generic-lock.patch
 	patches.suse/msft-hv-0734-Drivers-hv-vmbus-serialize-Offer-and-Rescind-offer.patch
 	patches.suse/msft-hv-0735-Drivers-hv-vmbus-hv_process_timer_expiration-can-be-.patch
+	patches.suse/msft-hv-0736-HID-hyperv-match-wait_for_completion_timeout-return-.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
