--- a/series.conf
+++ b/series.conf
@@ -21048,6 +21048,7 @@
 	patches.suse/msft-hv-0736-HID-hyperv-match-wait_for_completion_timeout-return-.patch
 	patches.suse/msft-hv-0738-hyperv-netvsc.c-match-wait_for_completion_timeout-re.patch
 	patches.suse/msft-hv-0739-hyperv-match-wait_for_completion_timeout-return-type.patch
+	patches.suse/msft-hv-0740-hyperv-Fix-the-error-processing-in-netvsc_send.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
