Drivers: hv: hv_balloon: Don't post pressure status from interrupt context (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21036,6 +21036,7 @@
 	patches.suse/msft-hv-0724-Tools-hv-do-not-add-redundant-in-hv_start_fcopy.patch
 	patches.suse/msft-hv-0725-Drivers-hv-hv_balloon-Make-adjustments-in-computing-.patch
 	patches.suse/msft-hv-0726-Drivers-hv-hv_balloon-Fix-a-locking-bug-in-the-ballo.patch
+	patches.suse/msft-hv-0727-Drivers-hv-hv_balloon-Don-t-post-pressure-status-fro.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
