--- a/series.conf
+++ b/series.conf
@@ -21023,6 +21023,7 @@
 	patches.suse/msft-hv-0693-hyperv-Add-IPv6-into-the-hash-computation-for-vRSS.patch
 	patches.suse/msft-hv-0710-storvsc-ring-buffer-failures-may-result-in-I-O-freez.patch
 	patches.suse/msft-hv-0711-hyperv-Fix-some-variable-name-typos-in-send-buffer-i.patch
+	patches.suse/msft-hv-0713-storvsc-in-responce-to-a-scan-event-scan-the-host.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
