Drivers: hv: check vmbus_device_create() return value in vmbus_process_offer() (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21041,6 +21041,7 @@
 	patches.suse/msft-hv-0729-Drivers-hv-vmbus-Fix-a-bug-in-vmbus_establish_gpadl.patch
 	patches.suse/msft-hv-0730-Drivers-hv-vmbus-Support-a-vmbus-API-for-efficiently.patch
 	patches.suse/msft-hv-0731-hv-hv_fcopy-drop-the-obsolete-message-on-transfer-fa.patch
+	patches.suse/msft-hv-0732-Drivers-hv-check-vmbus_device_create-return-value-in.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
