--- a/series.conf
+++ b/series.conf
@@ -21040,6 +21040,7 @@
 	patches.suse/msft-hv-0728-Drivers-hv-vmbus-Implement-a-clockevent-device.patch
 	patches.suse/msft-hv-0729-Drivers-hv-vmbus-Fix-a-bug-in-vmbus_establish_gpadl.patch
 	patches.suse/msft-hv-0730-Drivers-hv-vmbus-Support-a-vmbus-API-for-efficiently.patch
+	patches.suse/msft-hv-0731-hv-hv_fcopy-drop-the-obsolete-message-on-transfer-fa.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
