Tools: hv: do not add redundant '/' in hv_start_fcopy() (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21033,6 +21033,7 @@
 	patches.suse/msft-hv-0721-Tools-hv-remove-unused-bytes_written-from-kvp_update.patch
 	patches.suse/msft-hv-0722-Tools-hv-address-compiler-warnings-for-hv_kvp_daemon.patch
 	patches.suse/msft-hv-0723-Tools-hv-address-compiler-warnings-for-hv_fcopy_daem.patch
+	patches.suse/msft-hv-0724-Tools-hv-do-not-add-redundant-in-hv_start_fcopy.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
