--- a/series.conf
+++ b/series.conf
@@ -21032,6 +21032,7 @@
 	patches.suse/msft-hv-0720-x86-hyperv-Mark-the-Hyper-V-clocksource-as-being-con.patch
 	patches.suse/msft-hv-0721-Tools-hv-remove-unused-bytes_written-from-kvp_update.patch
 	patches.suse/msft-hv-0722-Tools-hv-address-compiler-warnings-for-hv_kvp_daemon.patch
+	patches.suse/msft-hv-0723-Tools-hv-address-compiler-warnings-for-hv_fcopy_daem.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
