--- a/series.conf
+++ b/series.conf
@@ -21043,6 +21043,7 @@
 	patches.suse/msft-hv-0731-hv-hv_fcopy-drop-the-obsolete-message-on-transfer-fa.patch
 	patches.suse/msft-hv-0732-Drivers-hv-check-vmbus_device_create-return-value-in.patch
 	patches.suse/msft-hv-0733-Drivers-hv-rename-sc_lock-to-the-more-generic-lock.patch
+	patches.suse/msft-hv-0734-Drivers-hv-vmbus-serialize-Offer-and-Rescind-offer.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
