Drivers: hv: vmbus: hv_process_timer_expiration() can be static (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21044,6 +21044,7 @@
 	patches.suse/msft-hv-0732-Drivers-hv-check-vmbus_device_create-return-value-in.patch
 	patches.suse/msft-hv-0733-Drivers-hv-rename-sc_lock-to-the-more-generic-lock.patch
 	patches.suse/msft-hv-0734-Drivers-hv-vmbus-serialize-Offer-and-Rescind-offer.patch
+	patches.suse/msft-hv-0735-Drivers-hv-vmbus-hv_process_timer_expiration-can-be-.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
