--- a/series.conf
+++ b/series.conf
@@ -21035,6 +21035,7 @@
 	patches.suse/msft-hv-0723-Tools-hv-address-compiler-warnings-for-hv_fcopy_daem.patch
 	patches.suse/msft-hv-0724-Tools-hv-do-not-add-redundant-in-hv_start_fcopy.patch
 	patches.suse/msft-hv-0725-Drivers-hv-hv_balloon-Make-adjustments-in-computing-.patch
+	patches.suse/msft-hv-0726-Drivers-hv-hv_balloon-Fix-a-locking-bug-in-the-ballo.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
