--- a/series.conf
+++ b/series.conf
@@ -21027,6 +21027,7 @@
 	patches.suse/msft-hv-0714-storvsc-force-discovery-of-LUNs-that-may-have-been-r.patch
 	patches.suse/msft-hv-0715-storvsc-fix-a-bug-in-storvsc-limits.patch
 	patches.suse/msft-hv-0716-storvsc-force-SPC-3-compliance-on-win8-and-win8-r2-h.patch
+	patches.suse/msft-hv-0718-Drivers-hv-vmbus-Use-get_cpu-to-get-the-current-CPU.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
