scsi: storvsc: Increase the ring buffer size (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21051,6 +21051,8 @@
 	patches.suse/msft-hv-0740-hyperv-Fix-the-error-processing-in-netvsc_send.patch
 	patches.suse/msft-hv-0741-hyperv-fix-sparse-warnings.patch
 
+	patches.suse/suse-hv-scsi-storvsc-Increase-the-ring-buffer-size.patch
+
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
 	patches.suse/suse-hv-netvsc-net-flow_keys.patch
