scsi: storvsc: Set the tablesize based on the information given by the host (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21055,6 +21055,7 @@
 	patches.suse/suse-hv-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
 	patches.suse/suse-hv-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
 	patches.suse/suse-hv-scsi-storvsc-Retrieve-information-about-the-capabili.patch
+	patches.suse/suse-hv-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
