--- a/series.conf
+++ b/series.conf
@@ -21052,6 +21052,7 @@
 	patches.suse/msft-hv-0741-hyperv-fix-sparse-warnings.patch
 
 	patches.suse/suse-hv-scsi-storvsc-Increase-the-ring-buffer-size.patch
+	patches.suse/suse-hv-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
