--- a/series.conf
+++ b/series.conf
@@ -21056,6 +21056,7 @@
 	patches.suse/suse-hv-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
 	patches.suse/suse-hv-scsi-storvsc-Retrieve-information-about-the-capabili.patch
 	patches.suse/suse-hv-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
+	patches.suse/suse-hv-scsi-storvsc-Enable-clustering.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
