scsi: storvsc: Always send on the selected outgoing channel (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21053,6 +21053,7 @@
 
 	patches.suse/suse-hv-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/suse-hv-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
+	patches.suse/suse-hv-scsi-storvsc-Always-send-on-the-selected-outgoing-ch.patch
 
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
