- locking/mcs: Add some needed ACCESS_ONCE calls. - locking/mutex: Disable optimistic spinning on some architectures   (bcn#919884). - Refresh patches.arch/000-apei_fixes.patch.

--- a/series.conf
+++ b/series.conf
@@ -418,6 +418,8 @@
 	patches.suse/0001-locking-mutex-Remove-MUTEX_SPIN_USE_MCS_QUEUE.patch
 	# fate#317234
 	patches.suse/0002-mutex-Do-not-unnecessarily-deal-with-waiters.patch
+	patches.fixes/0001-locking-mcs-Add-some-needed-ACCESS_ONCE-calls.patch
+	patches.fixes/0002-locking-mutex-Disable-optimistic-spinning-on-some-ar.patch
 
 	# bug 880357
 	patches.fixes/thread-clock-not-monotonic.patch
