Btrfs support for EXTENT_SAME ioctl (FATE#308234)
- Btrfs: batch the extent state operation when reading pages
  (FATE#308234).
- btrfs: Introduce extent_read_full_page_nolock() (FATE#308234).
- btrfs: offline dedupe (FATE#308234).
- Refresh
  patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch.
- Refresh
  patches.suse/btrfs-8283-replace-error-code-from-btrfs_drop_extents.patch.

--- a/series.conf
+++ b/series.conf
@@ -3815,6 +3815,9 @@
 	patches.suse/btrfs-8207-fix-possible-memory-leak-in-find_parent_nodes.patch
 	patches.suse/btrfs-8290-abtract-out-range-locking-in-clone-ioctl.patch
 	patches.suse/btrfs-8289-btrfs_ioctl_clone-Move-clone-code-into-it-s-own-func.patch
+	patches.suse/btrfs-8286-batch-the-extent-state-operation-when-reading-.patch
+	patches.suse/btrfs-8287-Introduce-extent_read_full_page_nolock.patch
+	patches.suse/btrfs-8288-offline-dedupe.patch
 	patches.suse/btrfs-8145-don-t-allow-a-subvol-to-be-deleted-if-it-is-th.patch
 	patches.suse/btrfs-8146-fix-the-error-handling-wrt-orphan-items.patch
 	patches.suse/btrfs-8162-fix-oops-when-writing-dirty-qgroups-to-disk.patch
