- kexec: fix build error when hugetlbfs is disabled (bsc#921741). - kexec: export free_huge_page to VMCOREINFO (bsc#921741). - Refresh   patches.fixes/kexec-add-the-values-related-to-buddy-system-for-filtering-free-pages.patch. - Refresh   patches.suse/0008_V3_kexec_Disable_at_runtime_if_the_kernel_enforces_module_loading_restrictions.patch.

--- a/series.conf
+++ b/series.conf
@@ -19548,6 +19548,8 @@
 	########################################################
 	patches.suse/kdump-dump_after_notifier.patch
 	patches.suse/kexec-save-PG_head_mask-in-VMCOREINFO
+	patches.suse/kexec-export-free_huge_page-to-VMCOREINFO
+	patches.fixes/kexec-fix-build-error-when-hugetlbfs-is-disabled
 
 	# bnc#820172
 	patches.suse/0001-kmsg_dump-don-t-run-on-non-error-paths-by-default.patch
