net/mlx4_en: Fix selftest failing on non 10G link speed (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16787,6 +16787,7 @@
 	patches.drivers/mlx4-0181-net-mlx4_en-Pad-ethernet-packets-smaller-than-17-byt.patch
 	patches.drivers/mlx4-0182-net-mlx4_en-Move-queue-stopped-waked-counters-to-be-.patch
 	patches.drivers/mlx4-0183-net-mlx4-Replace-mlx4_en_mac_to_u64-with-mlx4_mac_to.patch
+	patches.drivers/mlx4-0184-net-mlx4_en-Fix-selftest-failing-on-non-10G-link-spe.patch
 
 	########################################################
 	# Wireless Networking
