net/mlx4_core: Fix wrong dump of the vxlan offloads device capability (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16796,6 +16796,7 @@
 	patches.drivers/mlx4-0190-mlx4-Call-dev_kfree_skby_any-instead-of-dev_kfree_sk.patch
 	patches.drivers/mlx4-0191-net-mlx4-Support-shutdown-interface.patch
 	patches.drivers/mlx4-0192-net-mlx4_core-Fix-memory-access-error-in-mlx4_QUERY_.patch
+	patches.drivers/mlx4-0193-net-mlx4_core-Fix-wrong-dump-of-the-vxlan-offloads-d.patch
 
 	########################################################
 	# Wireless Networking
