net/mlx4_core: Remove unnecessary validation for port number (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16775,6 +16775,7 @@
 	patches.drivers/mlx4-0169-drivers-net-delete-non-required-instances-of-include.patch
 	patches.drivers/mlx4-0170-net-mlx4_core-clean-up-cq_res_start_move_to.patch
 	patches.drivers/mlx4-0171-net-mlx4_core-clean-up-srq_res_start_move_to.patch
+	patches.drivers/mlx4-0172-net-mlx4_core-Remove-unnecessary-validation-for-port.patch
 
 	########################################################
 	# Wireless Networking
