--- a/series.conf
+++ b/series.conf
@@ -16862,6 +16862,7 @@
 	patches.drivers/mlx4-0256-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/mlx4-0257-net-mlx4_en-do-not-ignore-autoneg-in-mlx4_en_set_pau.patch
 	patches.drivers/mlx4-0258-net-mlx4-Correctly-configure-single-ported-VFs-from-.patch
+	patches.drivers/mlx4-0259-net-mlx4-Use-the-correct-VSD-mask-in-UPDATE_QP.patch
 
 	########################################################
 	# Wireless Networking
