net/mlx4: Add support to get VF config (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16680,6 +16680,7 @@
 	patches.drivers/mlx4-0074-net-mlx4-Add-set-VF-mac-address-support.patch
 	patches.drivers/mlx4-0075-net-mlx4-Add-set-VF-default-vlan-ID-and-priority-sup.patch
 	patches.drivers/mlx4-0076-net-mlx4-Add-VF-MAC-spoof-checking-support.patch
+	patches.drivers/mlx4-0077-net-mlx4-Add-support-to-get-VF-config.patch
 
 	########################################################
 	# Wireless Networking
