net/mlx4_core: Resource tracker for reg/unreg vlans (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16735,6 +16735,7 @@
 	patches.drivers/mlx4-0129-net-mlx4_core-Fix-register-unreg-vlan-flow.patch
 	patches.drivers/mlx4-0130-net-mlx4_core-Fix-reg-unreg-vlan-mac-to-conform-to-t.patch
 	patches.drivers/mlx4-0131-net-mlx4_en-Use-vlan-id-instead-of-vlan-index-for-un.patch
+	patches.drivers/mlx4-0132-net-mlx4_core-Resource-tracker-for-reg-unreg-vlans.patch
 
 	########################################################
 	# Wireless Networking
