net/mlx4_en: Add NAPI support for transmit side (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16764,6 +16764,7 @@
 	patches.drivers/mlx4-0158-net-mlx4_en-Configure-the-XPS-queue-mapping-on-drive.patch
 	patches.drivers/mlx4-0159-net-mlx4_core-Set-CQE-EQE-size-to-64B-by-default.patch
 	patches.drivers/mlx4-0160-net-mlx4_en-Ignore-irrelevant-hypervisor-events.patch
+	patches.drivers/mlx4-0161-net-mlx4_en-Add-NAPI-support-for-transmit-side.patch
 
 	########################################################
 	# Wireless Networking
