net/mlx4_en: cq->irq_desc wasn't set in legacy EQ's (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16852,6 +16852,7 @@
 	patches.drivers/mlx4-0246-net-mlx4_core-Make-sure-the-max-number-of-QPs-per-MC.patch
 	patches.drivers/mlx4-0247-net-mlx4_core-In-SR-IOV-mode-host-should-add-promisc.patch
 	patches.drivers/mlx4-0248-net-mlx4_core-Remove-MCG-in-case-it-is-attached-to-p.patch
+	patches.drivers/mlx4-0249-net-mlx4_en-cq-irq_desc-wasn-t-set-in-legacy-EQ-s.patch
 
 	########################################################
 	# Wireless Networking
