net: use SPEED_UNKNOWN and DUPLEX_UNKNOWN when appropriate (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16832,6 +16832,7 @@
 	patches.drivers/mlx4-0226-net-mlx4_en-Fix-uninitialized-use-of-port_up-in-mlx4.patch
 	patches.drivers/mlx4-0227-net-mlx4_core-Deprecate-use_prio-module-parameter.patch
 	patches.drivers/mlx4-0228-net-mlx4_core-Replace-pr_warning-with-pr_warn.patch
+	patches.drivers/mlx4-0229-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	########################################################
 	# Wireless Networking
