--- a/series.conf
+++ b/series.conf
@@ -16872,6 +16872,7 @@
 	patches.drivers/mlx4-0266-net-mlx4_core-Allow-not-to-specify-probe_vf-in-SRIOV.patch
 	patches.drivers/mlx4-0267-treewide-fix-errors-in-printk.patch
 	patches.drivers/mlx4-0268-net-mlx4-Use-is_kdump_kernel-to-detect-kdump-kernel.patch
+	patches.drivers/mlx4-0269-mlx4_en-Convert-the-normal-skb-free-path-to-dev_cons.patch
 
 	########################################################
 	# Wireless Networking
