PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16859,6 +16859,7 @@
 	patches.drivers/mlx4-0253-net-mlx4_en-Reduce-memory-consumption-on-kdump-kerne.patch
 	patches.drivers/mlx4-0254-net-mlx4_en-mlx4_en_-gs-et_priv_flags-can-be-static.patch
 	patches.drivers/mlx4-0255-mlx4_core-Add-support-for-secure-host-and-SMP-firewa.patch
+	patches.drivers/mlx4-0256-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
