net/mlx4_en: Avoid a cache line miss in TX completion for single frag skb's (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16887,6 +16887,7 @@
 	patches.fixes/apparmor-no-need-to-delay-vfree.patch
 	patches.fixes/nick-kvfree-from-apparmor.patch
 	patches.drivers/mlx4-0283-net-mlx4_en-tx_info-allocated-with-kmalloc-instead-o.patch
+	patches.drivers/mlx4-0284-net-mlx4_en-Avoid-a-cache-line-miss-in-TX-completion.patch
 
 	########################################################
 	# Wireless Networking
