--- a/series.conf
+++ b/series.conf
@@ -16605,6 +16605,7 @@
 
 	# mlx4 SP4 update (bug#919382 FATE#317529)
 	patches.drivers/mlx4-0001-remove-init-of-dev-perm_addr-in-drivers.patch
+	patches.drivers/mlx4-0002-net-mlx4_en-remove-redundant-code.patch
 
 	########################################################
 	# Wireless Networking
