net/mlx4_en: Coding style cleanup in mlx4_en_dcbnl_ieee_setpfc() (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16719,6 +16719,7 @@
 	patches.drivers/mlx4-0113-net-mlx4_core-Respond-to-operation-request-by-firmwa.patch
 	patches.drivers/mlx4-0114-include-Convert-ethernet-mac-address-declarations-to.patch
 	patches.drivers/mlx4-0115-net-mlx4-Staticize-local-functions.patch
+	patches.drivers/mlx4-0116-net-mlx4_en-Coding-style-cleanup-in-mlx4_en_dcbnl_ie.patch
 
 	########################################################
 	# Wireless Networking
