--- a/series.conf
+++ b/series.conf
@@ -16759,6 +16759,7 @@
 	patches.drivers/mlx4-0153-net-mlx4-calls-skb_set_hash.patch
 	patches.drivers/mlx4-0154-net-mlx4_core-Remove-zeroed-out-of-explicit-QUERY_FU.patch
 	patches.drivers/mlx4-0155-net-mlx4_core-Rename-QUERY_FUNC_CAP-fields.patch
+	patches.drivers/mlx4-0156-net-mlx4_core-Introduce-nic_info-new-flag-in-QUERY_F.patch
 
 	########################################################
 	# Wireless Networking
