net/mlx4_en: Change log level from error to debug for vlan related messages (bug#919382 FATE#317529).

--- a/series.conf
+++ b/series.conf
@@ -16703,6 +16703,7 @@
 	patches.drivers/mlx4-0097-net-mlx4_en-Fix-resource-leak-in-error-flow.patch
 	patches.drivers/mlx4-0098-net-mlx4_en-Do-not-query-stats-when-device-port-is-d.patch
 	patches.drivers/mlx4-0099-net-mlx4_en-Move-register_netdev-to-the-end-of-initi.patch
+	patches.drivers/mlx4-0100-net-mlx4_en-Change-log-level-from-error-to-debug-for.patch
 
 	########################################################
 	# Wireless Networking
