--- a/series.conf
+++ b/series.conf
@@ -16770,6 +16770,7 @@
 	patches.drivers/mlx4-0164-mlx4_en-Add-PTP-hardware-clock.patch
 	patches.drivers/mlx4-0165-mlx4_en-Only-cycle-port-if-HW-timestamp-config-chang.patch
 	patches.fixes/PCI-Add-PCIe-Link-Capability-link-speed-and-width-na.patch
+	patches.drivers/mlx4-0167-net-mlx4_core-Warn-if-device-doesn-t-have-enough-PCI.patch
 
 	########################################################
 	# Wireless Networking
